0.11.0/_sources/reference/dipy.sims.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`sims`
===========
.. automodule:: dipy.sims

.. currentmodule:: dipy.sims
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`sims.phantom`
---------------------------
.. automodule:: dipy.sims.phantom

.. currentmodule:: dipy.sims.phantom
.. autosummary::

   SingleTensor
   add_noise
   diff2eigenvectors
   get_data
   gradient_table
   orbital_phantom
   vec2vec_rotmat

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`sims.voxel`
-------------------------
.. automodule:: dipy.sims.voxel

.. currentmodule:: dipy.sims.voxel
.. autosummary::

   DKI_signal
   MultiTensor
   SingleTensor
   SticksAndBall
   add_noise
   all_tensor_evecs
   dki_design_matrix
   dot
   kurtosis_element
   multi_tensor
   multi_tensor_dki
   multi_tensor_msd
   multi_tensor_odf
   multi_tensor_pdf
   multi_tensor_rtop
   single_tensor
   single_tensor_msd
   single_tensor_odf
   single_tensor_pdf
   single_tensor_rtop
   sphere2cart
   sticks_and_ball
   vec2vec_rotmat


.. currentmodule:: dipy.sims


.. currentmodule:: dipy.sims.phantom

SingleTensor
~~~~~~~~~~~~

.. autofunction:: SingleTensor

add_noise
~~~~~~~~~

.. autofunction:: add_noise

diff2eigenvectors
~~~~~~~~~~~~~~~~~

.. autofunction:: diff2eigenvectors

get_data
~~~~~~~~

.. autofunction:: get_data

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

orbital_phantom
~~~~~~~~~~~~~~~

.. autofunction:: orbital_phantom

vec2vec_rotmat
~~~~~~~~~~~~~~

.. autofunction:: vec2vec_rotmat


.. currentmodule:: dipy.sims.voxel

DKI_signal
~~~~~~~~~~

.. autofunction:: DKI_signal

MultiTensor
~~~~~~~~~~~

.. autofunction:: MultiTensor

SingleTensor
~~~~~~~~~~~~

.. autofunction:: SingleTensor

SticksAndBall
~~~~~~~~~~~~~

.. autofunction:: SticksAndBall

add_noise
~~~~~~~~~

.. autofunction:: add_noise

all_tensor_evecs
~~~~~~~~~~~~~~~~

.. autofunction:: all_tensor_evecs

dki_design_matrix
~~~~~~~~~~~~~~~~~

.. autofunction:: dki_design_matrix

dot
~~~

.. autofunction:: dot

kurtosis_element
~~~~~~~~~~~~~~~~

.. autofunction:: kurtosis_element

multi_tensor
~~~~~~~~~~~~

.. autofunction:: multi_tensor

multi_tensor_dki
~~~~~~~~~~~~~~~~

.. autofunction:: multi_tensor_dki

multi_tensor_msd
~~~~~~~~~~~~~~~~

.. autofunction:: multi_tensor_msd

multi_tensor_odf
~~~~~~~~~~~~~~~~

.. autofunction:: multi_tensor_odf

multi_tensor_pdf
~~~~~~~~~~~~~~~~

.. autofunction:: multi_tensor_pdf

multi_tensor_rtop
~~~~~~~~~~~~~~~~~

.. autofunction:: multi_tensor_rtop

single_tensor
~~~~~~~~~~~~~

.. autofunction:: single_tensor

single_tensor_msd
~~~~~~~~~~~~~~~~~

.. autofunction:: single_tensor_msd

single_tensor_odf
~~~~~~~~~~~~~~~~~

.. autofunction:: single_tensor_odf

single_tensor_pdf
~~~~~~~~~~~~~~~~~

.. autofunction:: single_tensor_pdf

single_tensor_rtop
~~~~~~~~~~~~~~~~~~

.. autofunction:: single_tensor_rtop

sphere2cart
~~~~~~~~~~~

.. autofunction:: sphere2cart

sticks_and_ball
~~~~~~~~~~~~~~~

.. autofunction:: sticks_and_ball

vec2vec_rotmat
~~~~~~~~~~~~~~

.. autofunction:: vec2vec_rotmat

